# ascendancy

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_control_system.cpp  bench_generic_lifted_algorithm.cpp
lib/: Algorithm.hpp  CMakeLists.txt  ConstRefGenerator.hpp  ControlSystem.hpp  Controller.hpp  DataStore.cpp  DataStore.hpp  EventQueue.hpp  GenericLiftedAlgorithm.hpp  GenericRefGenerator.hpp  Logger.cpp  Logger.hpp  NonCausalAlgorithm.hpp  PIDController.hpp  RefGenerator.hpp  StateSpace.hpp  globals.hpp  ref_generators.fbs  ref_generators_generated.h  serialisation.cpp  serialisation.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  TestRefGen.hpp  helpers.cpp  helpers.hpp  test_algorithms.cpp  test_control_system.cpp  test_controllers.cpp  test_event_queue.cpp  test_main.cpp  test_ref_generators.cpp  test_serialisation.cpp  test_state_space.cpp
tests/data/: const_refgen.json  generic_refgen.json
